--- a/fp/css/nav.css
+++ b/fp/css/nav.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat+Alternates');
-
 nav {
   overflow: hidden;
   background-color: #F9E7E7;
@@ -7,12 +5,13 @@ nav {
 
 nav a {
   float: left;
+  display: block;
   text-decoration: none;
   width: 20%;
   text-align: center;
   color: #2274A5;
   font-family: 'Montserrat Alternates', sans-serif;
-  padding: 1% 0;
+  padding: 20px 0;
 }
 
 nav a:hover {
@@ -25,9 +24,9 @@ nav a:active {
 .sticky {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: calc(100% - 16px);
 }
 
 .sticky + #pageID {
-  padding-top: 25%;
+  padding-top: 60px;
 }
